# ndd_agent_giga

./: README.md  docker-compose.yaml  pyproject.toml
config/: external_api.env  giga_chat_api.env  postgres.env  redis.env  telegram_bot.env
src/common/api/: dependencies.py  lifespan.py
src/common/db/: model.py
src/common/domain/: schema.py
src/embeddings/: requirements.txt
src/embeddings/api/: gigachat.py  main.py  openai.py  schema.py
src/embeddings/domain/: embeddings.py
src/giga_chat/: requirements.txt
src/giga_chat/api/: giga_chat_router.py  main.py
src/giga_chat/api/config/: gunicorn.conf.py  sgi_config.py
src/giga_chat/domain/: llm.py
src/redis/: config.py  redis.py
src/rospatent_scraper/: Dockerfile  requirements.txt
src/rospatent_scraper/api/: main.py  rospatent_scraper_router.py
src/rospatent_scraper/api/config/: gunicorn.conf.py
src/rospatent_scraper/domain/: additional_info.py  all_possible_info.py  db.py  family_similar.py  full_info.py  schema.py  search.py  search_similar.py  search_xlsx.py  utils.py
src/telegram_bot/: requirements.txt
src/telegram_bot/api/: application.py  commands.py  main.py
src/telegram_bot/api/config/: gunicorn.conf.py  sgi_config.py  telegram_bot_config.py
src/telegram_bot/infrastructure/: db.py
