[tool.poetry]
name = "ndd_pattent"
version = "0.1.0"
description = ""
authors = ["foryourselfand <foryourselfand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.37.2"
torch = "^2.2.0"
jupyter = "^1.0.0"
icecream = "^2.1.3"

[tool.poetry.group.api.dependencies]
fastapi = "^0.105.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
aiohttp = "^3.9.1"

[tool.poetry.group.ml.dependencies]
langchain = "0.0.350"
langchain-community = "0.0.3"
langchain-core = "0.1.1"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
pymorphy3 = "^1.3.1"
gigachat = "0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

